@@ -1,22 +1,18 @@
 package de.burger.forensics.infrastructure.logging;
 
-import org.apache.logging.log4j.Level;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.core.LogEvent;
-import org.apache.logging.log4j.core.LoggerContext;
-import org.apache.logging.log4j.core.config.Configuration;
-import org.apache.logging.log4j.core.config.LoggerConfig;
-import org.apache.logging.log4j.core.test.appender.ListAppender;
 import org.aspectj.lang.JoinPoint;
 import org.aspectj.lang.Signature;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.List;
+import java.util.Objects;
+import java.util.UUID;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
@@ -25,47 +21,25 @@ import static org.mockito.Mockito.when;
 class MethodLoggingAspectTimingTest {
 
     private static final Pattern OK_IN_PATTERN = Pattern.compile("OK in (\\d+) ms");
+    private static final Pattern MESSAGE_PATTERN = Pattern.compile("^.*\\] \\[cid=.*?\\] (.*)$");
 
     private final MethodLoggingAspect aspect = new MethodLoggingAspect();
-    private LoggerContext loggerContext;
-    private Configuration loggerConfig;
-    private ListAppender listAppender;
-    private String loggerName;
+    private Path logFile;
 
     @BeforeEach
-    void setUp() {
-        System.setProperty("forensics.btmgen.logToFile", "false");
-        loggerContext = (LoggerContext) LogManager.getContext(false);
-        loggerConfig = loggerContext.getConfiguration();
-        loggerName = TestTarget.class.getName();
-
-        listAppender = new ListAppender("list-appender");
-        listAppender.start();
-        loggerConfig.addAppender(listAppender);
-
-        final LoggerConfig rootConfig = loggerConfig.getRootLogger();
-        rootConfig.addAppender(listAppender, Level.WARN, null);
-        rootConfig.setLevel(Level.WARN);
-
-        final LoggerConfig config = new LoggerConfig(loggerName, Level.WARN, false);
-        config.addAppender(listAppender, Level.WARN, null);
-        loggerConfig.addLogger(loggerName, config);
-        loggerContext.updateLoggers();
+    void setUp() throws Exception {
+        logFile = Files.createTempFile("forensics-btmgen", "-" + UUID.randomUUID() + ".log");
+        System.setProperty("forensics.btmgen.logToFile", "true");
+        System.setProperty("forensics.btmgen.logFile", logFile.toString());
     }
 
     @AfterEach
-    void tearDown() {
-        if (loggerConfig != null && listAppender != null) {
-            loggerConfig.getRootLogger().removeAppender(listAppender.getName());
-            if (loggerName != null) {
-                loggerConfig.removeLogger(loggerName);
-            }
-            listAppender.stop();
-            if (loggerContext != null) {
-                loggerContext.updateLoggers();
-            }
-        }
+    void tearDown() throws Exception {
         System.clearProperty("forensics.btmgen.logToFile");
+        System.clearProperty("forensics.btmgen.logFile");
+        if (logFile != null) {
+            Files.deleteIfExists(logFile);
+        }
     }
 
     @Test
@@ -116,10 +90,17 @@ class MethodLoggingAspectTimingTest {
     }
 
     private List<String> messages() {
-        return listAppender.getEvents().stream()
-                .map(LogEvent::getMessage)
-                .map(message -> message.getFormattedMessage())
-                .collect(Collectors.toList());
+        if (logFile == null || !Files.exists(logFile)) {
+            return List.of();
+        }
+        try {
+            return Files.readAllLines(logFile).stream()
+                    .map(MethodLoggingAspectTimingTest::extractMessage)
+                    .filter(Objects::nonNull)
+                    .toList();
+        } catch (Exception ignored) {
+            return List.of();
+        }
     }
 
     private List<Long> extractElapsedMs() {
@@ -127,7 +108,15 @@ class MethodLoggingAspectTimingTest {
                 .map(OK_IN_PATTERN::matcher)
                 .filter(Matcher::find)
                 .map(matcher -> Long.parseLong(matcher.group(1)))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private static String extractMessage(String line) {
+        Matcher matcher = MESSAGE_PATTERN.matcher(line);
+        if (!matcher.matches()) {
+            return null;
+        }
+        return matcher.group(1);
     }
 
     private static final class TestTarget {
